src/ui/jsf-shared/resources/META-INF/resources/flexive-faces/css/components.css
/**
 * Styles for flexive components
 */

/* FxValueInput */

/* Container of a fxValueInput element */
div.fxValueInput {
    width: 300px;
}

/* Container in ContentEditor used to show readonly properties */
.property div.fxValueInputReadOnly {
    border: 1px dashed #A0A0A0;
    padding: 2px;
    width: 394px !important;
}

/* An input row containing the input element and the default language checkbox */
div.fxValueInputRow {
/*position: relative;*/
    width: 225px;
    min-height: 20px; /* avoid problems with floating checkboxes */
    padding: 1px 1px 1px 0;
}

input.fxValueDefaultLanguageRadio {
    float: right;
}

.FxHTMLInput .fxValueInputRow .fxValueHtmlEditorContainer {
    padding-top: 25px; /* Move below language select */
}

/* Limit width of the month select list*/

.FxDateInput .popupCalendar, .FxDateTimeInput .popupCalendar,
    .FxDateRangeInput .popupCalendar, .FxDateTimeRangeInput .popupCalendar {
    display: none;
    position: absolute;
    left: 10px;
    top: 10px;
    z-index: 999;
}

select.fxValueSelectInput, .fxValueInputElementWidth, input.fxValueTextInput {
    width: 175px;
}

textarea.fxValueTextArea, textarea.fxValueTextAreaHtml {
    width: 100%; /* Size will be constrained by .fxValueTextAreaContainer */
    height: 140px;
}

/* Stretch single-language inputs over space normally occupied by the language select */
.fxValueInput input[type="text"].singleLanguage,
    .fxValueInput textarea.singleLanguage,
    .fxValueInput select.singleLanguage {
    width: 100%; /* don't force with !important because it breaks standalone inputs outside a fx:formRow */
}

.FxReferenceInput input[type=text] {
    width: 65% !important; /* leave room for the browse references button, overrides yui-skin-sam autocomplete width */
}

.FxReferenceInput input[type=text].singleLanguage {
    width: 92% !important; /* leave room for the browse references button, overrides yui-skin-sam autocomplete width */
}

.fxValueInput input,
    .fxValueInput textarea {
    border: 1px solid gray;
}

.fxValueInput input[type="checkbox"] {
    border: none; /* looks ugly in IE */
    margin: 0 0.3em 0 0; /* don't use vertical margins to ensure the checkbox isn't higher than the main input (FF Windows) */
}

.fxValueInput input[type="checkbox"].fxValueEmpty {
    opacity: 0.3;
    filter: alpha(opacity = 30);
}

.fxValueTextAreaContainer {
    height: 150px;
}

.fxResizeable textArea.fxValueTextArea {
    height: 100%; /* stretch to dynamic container size */
}

input.fxValueTextInput {
/*float: left;*/
}

input.fxValueFileInput {
/*float: left;*/
}

div.fxValueInput {
    display: block;
}

div.fxValueInput select.languages {
    float: right;
    width: 70px;
}

div.fxValueInputLanguageIcon {
    float: right;
    padding-right: 5px;
    width: 15px;
}

div.fxValueInput img.findReferencesIcon {
}

div.fxValueInputAutocomplete {
    position: absolute;
    left: 0;
}

/* Query editor */

.queryRoot {
    width: 600px;
}

table.queryRoot {
    border-collapse: separate;
    border: 1px solid #A0A0A0;
    background-color: #EAF1D6;
}

table.queryRoot td.nestedTable {
    border: 1px solid #A0A0A0;
    border-right: 0;
    margin-right: 0;
}

table.queryRoot td.queryOperator {
    padding-left: 5px;
}

table.queryRoot td.editorRow {
    border: 1px solid #EAF1D6;
}

table.queryRoot tr {
    height: 2.5em;
}

table.queryChild0, table.queryChild1 {
    border-collapse: separate;
    width: 100%;
}

table.queryChild0 {
    background-color: #EAF1D6;
}

table.queryChild0 td.editorRow {
    border: 1px solid #EAF1D6;
}

table.queryChild1 {
    background-color: #F9FCF1;
}

table.queryChild1 td.editorRow {
    border: 1px solid #F9FCF1;
}

table.queryRoot td.invalidNodeValue {
    background-color: #FFF691;
}

table.queryRoot td.selection {
    background-color: #D2E4FD;
}

div.queryRowElement {
    float: left;
    white-space: nowrap;
    padding-right: 3px;
    overflow-x: hidden;
}

div.queryWideRowElement {
    float: right;
    padding-top: 5px;
    margin-right: 20px;
}

div.queryRemoveNode {
    position: absolute;
    right: 0;
    padding-left: 5px;
}

div.queryRowLabel {
    float: right;
    padding-right: 5px;
}

div.queryInputContainer {
    position: relative;
    float: right;
    width: 260px;
}

select.queryValueComparator {
    width: 100px;
}

#queryEditorContainer .emptyMessage {
    width: 580px;
    outline: 1px solid #A0A0A0;
    background-color: #EAF1D6;
    padding: 10px;
}

/* input styles for the query editor */

.queryRoot div.fxValueInputRow {
    width: 150px;
}

.queryRoot .fxValueInputElementWidth {
    width: 122px; /*overflow: hidden;*/
}

.queryRoot input.fxValueTextInput,
    .queryRoot .fxValueInput input[type="text"].singleLanguage,
    .queryRoot .fxValueInput textarea.singleLanguage,
    .queryRoot .fxValueInput select.singleLanguage {
    width: 125px;
}

/* Reduce text input for reference popup button */
.queryRoot .FxReferenceInput input.fxValueTextInput {
    width: 100px !important;
}

.queryRoot textarea.fxValueTextArea, .queryRoot textarea.fxValueTextAreaHtml {
    height: 100px;
}

.queryRoot textarea.fxValueTextAreaHtml {
    width: 350px;
}

.queryRoot input.fxValueTextInput {
    float: left;
}

.queryRoot div.fxValueInput {
    width: 210px;
}

/** Temporary fix for date input alignment */
.queryRoot .FxDateInput img.button {
    margin-top: -5px;
}

/** FxPopup - a static dojo popup, e.g. for displaying some text */
div.dojoDialog {
    background-color: #F9FCF1;
    border: 1px solid black;
    -moz-border-radius: 4px;
    padding: 4px;
}

/** jsDataScroller */

table.dataScroller {
    width: 180px;
}

table.dataScroller td.button {
    padding: 2px;
    width: 20px;
}

td.button a {
    outline: none;
}

td.button img {
    opacity: 0.8;
}

td.button:hover img {
    opacity: 1;
}

table.dataScroller td.scrollPosition {
    width: 100px;
    padding: 2px;
}

td.scrollPosition input {
    width: 96px;
    text-align: center;
}
/* ... */

